openshift/network-event-interceptor/application/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: network-event-interceptor
  namespace: network-event-interceptor
  labels:
    app.kubernetes.io/instance: nei-app-dev
    app.kubernetes.io/name: nei-app
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nei-app-dev
      app.kubernetes.io/name: nei-app
      app.openshift.io/runtime: nodejs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: nei-app-dev
        app.kubernetes.io/name: nei-app
        app.openshift.io/runtime: nodejs
    spec:
      containers:
        - name: nei-app
          image: default-route-openshift-image-registry.apps.ocp4.mr-openshift.co.uk/network-event-interceptor/network-event-interceptor
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
