openshift/network-event-interceptor/application/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nei-app-route
  namespace: network-event-interceptor
spec:
  path: /
  to:
    kind: Service
    name: nei-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
